# medhub

./: .coverage  .env  .env.example  .gitignore  README.md  asdf.py  main.py  pyproject.toml  qwe.py  requirements.txt
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 0090e5338285_is_deleted.py  091b498fe20e_init.py  220deecddfcd_init.py  34776e9109ad_init.py  36e1391859ed_init.py  3b7a44e7f0b3_new_init.py  496fed814446_init.py  55581acd4615_init.py  58596f5df62d_init.py  6a5c76b0e357_initial.py  95af1db7c2a8_init.py  a2bf23f39629_publication_limit_in_user.py  bd5db1739eaa_init.py  bfe980542492_created_at_in_article_likes.py  e04e1441c4ec_init.py  ebb265bd1710_init.py  ed09a0ee80f3_init.py
app/api/: router.py
app/api/endpoints/: home.py  register.py  search_article.py  submit-article.py  submit_article.py
app/api/endpoints/templates/: add_article.html  form.html  home.html  register.html  search_results.html
app/application/dto/: __init__.py  articleAuth_dto.py  articleCreate_dto.py  article_create_dto.py  user_auth_dto.py
app/application/services/: article_manager.py  article_service.py  cache_service.py  comment_manager.py  comment_service.py  login_user.py  register_user.py  user_service.py
app/application/services/security/: auth_service.py  login_user.py  password_hasher.py
app/application/use_cases/: register_user.py
app/core/: database.py
app/core/models/: article.py  register.py
app/dependencies/: article.py  depends_submit_article.py  parse_article.py
app/domain/: entities.py  repositories.py
app/domain/entities/: article.py  comment.py  user.py
app/domain/interfaces/: articleRepositories.py  article_service.py  auth_service.py  commentRepositories.py  comment_repositories.py  logic_repository.py  repositories.py  user_repository.py
app/infrastructure/: config.py
app/infrastructure/database/: connection.py
app/infrastructure/database/models/: __init__.py  article.py  client.py  comment.py  reaction.py  user.py
app/infrastructure/database/repositories/: article_repository.py  (+4 more)
app/infrastructure/security/: auth_service.py  jwt_handler.py  password_hasher.py
app/models/: dto.py  pydantic.py
app/presentation/api/: router.py
app/presentation/dependencies/: articles_dependencies.py  auth.py  cache.py  comments.py  current_user.py  depends_submit_article.py  parse_article.py  parse_user.py
app/repositories/: article_manager.py  article_repository.py
app/services/: article_manager.py
fastapi-app/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt
fastapi-app/alembic/versions/: 0090e5338285_is_deleted.py  ac6edb6bf1c2_init_table.py
fastapi-app/tests/: conftest.py  example.py
fastapi-app/tests/test_repositories/: test_article_repositories.py  test_comment_repository.py  test_logic_repository.py
medhub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
rate-limiter/: go.mod
rate-limiter/cmd/server/: main.go
rate-limiter/internal/config/: config.go
rate-limiter/internal/handler/: limiter.go
rate-limiter/internal/service/: limiter.go
rate-limiter/internal/storage/: redis.go
scripts/: init_db.py
tests/: conftest.py
tests/test_repositories/: test_article_repositories.py  test_cache_repository.py  test_comment_repository.py  test_logic_repository.py  test_user_repositories.py
tests/test_services/: test_article_services.py
(+78 files in other folders)
