[project]
name = "your-fastapi-project"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

# Конфигурация Ruff (рекомендуется)
[tool.ruff]
# Длина строки
line-length = 88

# Версия Python
target-version = "py311"

# Исключить определенные папки
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Выберите правила для проверки
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (сортировка импортов)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

# Игнорировать определенные правила
ignore = [
    "E501",  # line too long (если хотите игнорировать длинные строки)
    "B008",  # Разрешить вызовы функций в значениях по умолчанию (для FastAPI Depends)
]

# Разрешить автофиксы
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Игнорировать некоторые правила в тестах
"tests/**/*.py" = ["E501"]

[tool.ruff.format]
# Форматирование в стиле Black
quote-style = "double"
indent-style = "space"

# Альтернатива: конфигурация Flake8
# (Flake8 не поддерживает pyproject.toml напрямую, 
# нужен плагин flake8-pyproject или использовать .flake8 файл)
[tool.flake8]
max-line-length = 88
exclude = [".git", "__pycache__", ".venv"]
ignore = ["E203", "W503"]